--- a/curso_html_css_javascript/modules/coursera-module3-solution/index.html
+++ b/curso_html_css_javascript/modules/coursera-module3-solution/index.html
@@ -63,29 +63,29 @@
             <div class="col-xs-12">
                 <div id="ChickenT">Chiquen</div>
                 <p id="ChickenP">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed cumque
-                    aperiam ad veniam in. Vitae quos neque obcaecati vero. Nam
-                    necessitatibus ipsa vitae suscipit reprehenderit consequatur impedit
-                    tempore quaerat numquam.
+                    Bacon ipsum dolor amet ball tip bacon buffalo, t-bone pig venison ham capicola boudin burgdoggen andouille ham hock beef fatback. Cow spare ribs kevin shoulder pastrami, drumstick biltong frankfurter cupim burgdoggen pork. Corned beef alcatra boudin ground round, burgdoggen andouille cow leberkas flank tail filet mignon salami doner pork belly buffalo. Venison flank ham jowl, frankfurter shoulder cupim pork belly tri-tip swine buffalo porchetta landjaeger corned beef pancetta. Strip steak flank corned beef kevin swine sirloin. Rump chicken pastrami, hamburger kevin doner beef shankle filet mignon tongue pork pork chop.
+                    Jerky pancetta frankfurter beef ribs meatloaf porchetta filet mignon t-bone. Prosciutto porchetta picanha cupim pancetta. Kevin drumstick pork loin tail jowl capicola. Filet mignon porchetta chicken, landjaeger picanha swine shoulder fatback corned beef kielbasa pancetta.
+                    Flank brisket pork loin ham hock tenderloin burgdoggen biltong jerky meatloaf sirloin porchetta short loin alcatra shank pork chop. Rump flank beef ribs, tri-tip burgdoggen salami meatball prosciutto short ribs frankfurter jowl tenderloin shoulder. Meatball frankfurter kielbasa, cow alcatra pork andouille pork chop fatback pork belly. Turkey tail burgdoggen, biltong bacon leberkas hamburger capicola landjaeger drumstick. Landjaeger tri-tip ground round porchetta, hamburger brisket alcatra ham short ribs cupim. Boudin shankle turkey pork belly hamburger biltong capicola ham pork kielbasa frankfurter porchetta cow fatback brisket.
+                    <br>(End of Chicken section)<a href="#top"> Back To Top</a>
                 </p>
             </div>
             <div class="col-xs-12">
                 <div id="BeefT">Beef</div>
                 <p id="BeefP">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
-                    officiis, alias eaque vitae doloremque qui accusamus voluptas beatae
-                    necessitatibus ducimus, facilis repellat dolor sit in officia
-                    consequatur corporis vero totam.
-                </p>
+                    Bacon ipsum dolor amet ball tip bacon buffalo, t-bone pig venison ham capicola boudin burgdoggen andouille ham hock beef fatback. Cow spare ribs kevin shoulder pastrami, drumstick biltong frankfurter cupim burgdoggen pork. Corned beef alcatra boudin ground round, burgdoggen andouille cow leberkas flank tail filet mignon salami doner pork belly buffalo. Venison flank ham jowl, frankfurter shoulder cupim pork belly tri-tip swine buffalo porchetta landjaeger corned beef pancetta. Strip steak flank corned beef kevin swine sirloin. Rump chicken pastrami, hamburger kevin doner beef shankle filet mignon tongue pork pork chop.
+                    Jerky pancetta frankfurter beef ribs meatloaf porchetta filet mignon t-bone. Prosciutto porchetta picanha cupim pancetta. Kevin drumstick pork loin tail jowl capicola. Filet mignon porchetta chicken, landjaeger picanha swine shoulder fatback corned beef kielbasa pancetta.
+                    Flank brisket pork loin ham hock tenderloin burgdoggen biltong jerky meatloaf sirloin porchetta short loin alcatra shank pork chop. Rump flank beef ribs, tri-tip burgdoggen salami meatball prosciutto short ribs frankfurter jowl tenderloin shoulder. Meatball frankfurter kielbasa, cow alcatra pork andouille pork chop fatback pork belly. Turkey tail burgdoggen, biltong bacon leberkas hamburger capicola landjaeger drumstick. Landjaeger tri-tip ground round porchetta, hamburger brisket alcatra ham short ribs cupim. Boudin shankle turkey pork belly hamburger biltong capicola ham pork kielbasa frankfurter porchetta cow fatback brisket.
+                    <br>(End of Beef section)<a href="#top"> Back To Top</a>
+                  </p>
                 </a>
             </div>
             <div class="col-xs-12">
                 <div id="SushiT">Sushi</div>
                 <p id="SushiP">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                    voluptatibus sint, animi magnam ratione reiciendis a tempore nulla
-                    perspiciatis aspernatur facilis eos quia cum, sequi molestias. Veniam
-                    distinctio sequi cupiditate.
+                    Bacon ipsum dolor amet ball tip bacon buffalo, t-bone pig venison ham capicola boudin burgdoggen andouille ham hock beef fatback. Cow spare ribs kevin shoulder pastrami, drumstick biltong frankfurter cupim burgdoggen pork. Corned beef alcatra boudin ground round, burgdoggen andouille cow leberkas flank tail filet mignon salami doner pork belly buffalo. Venison flank ham jowl, frankfurter shoulder cupim pork belly tri-tip swine buffalo porchetta landjaeger corned beef pancetta. Strip steak flank corned beef kevin swine sirloin. Rump chicken pastrami, hamburger kevin doner beef shankle filet mignon tongue pork pork chop.
+                    Jerky pancetta frankfurter beef ribs meatloaf porchetta filet mignon t-bone. Prosciutto porchetta picanha cupim pancetta. Kevin drumstick pork loin tail jowl capicola. Filet mignon porchetta chicken, landjaeger picanha swine shoulder fatback corned beef kielbasa pancetta.
+                    Flank brisket pork loin ham hock tenderloin burgdoggen biltong jerky meatloaf sirloin porchetta short loin alcatra shank pork chop. Rump flank beef ribs, tri-tip burgdoggen salami meatball prosciutto short ribs frankfurter jowl tenderloin shoulder. Meatball frankfurter kielbasa, cow alcatra pork andouille pork chop fatback pork belly. Turkey tail burgdoggen, biltong bacon leberkas hamburger capicola landjaeger drumstick. Landjaeger tri-tip ground round porchetta, hamburger brisket alcatra ham short ribs cupim. Boudin shankle turkey pork belly hamburger biltong capicola ham pork kielbasa frankfurter porchetta cow fatback brisket.
+                    <br>(End of Sushi section)<a href="#top"> Back To Top</a>
                 </p>
             </div>
             </a>
