--- a/curso_html_css_javascript/modules/coursera-module4-solution/easier/index.html
+++ b/curso_html_css_javascript/modules/coursera-module4-solution/easier/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
-  <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
-  <script src="script.js"></script>
-</head>
-<body>
-  <h1>Module 4 Solution Starter</h1>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Module 4 Solution Starter</title>
+    <script src="SpeakHello.js"></script>
+    <script src="SpeakGoodBye.js"></script>
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <h1>Module 4 Solution Starter</h1>
+    <br />
+    <p> Now open the Console tab of Chrome Developer Tools to see if there are no errors and the requested information is displayed    </p>
+    <p> Ahora abra la pestaña Consola de las Herramientas para desarrolladores de Chrome para ver si no hay errores y se muestra la informacion solicitada   </p>
+  </body>
 </html>
